# serde_dyn

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: de.rs  ser.rs
